# logistic-engine

./: .clang-format  .clangd  .env.example  .gitignore  CMakeLists.txt  README.MD  README.md  docker-compose.yml  drizzle.config.ts  lectures.md  package-lock.json  package.json  tsconfig.json
cpp/: distance_calculator.cpp  main.cpp  vrp_solver.cpp
src/: app.controller.ts  app.service.ts
src/database/: index.ts
src/database/schema/: deliveries.ts  depots.ts  index.ts  route_stops.ts  routes.ts  vehicles.ts
